--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
     <script type="text/javascript" src="./css/jscex-async-powerpack.min.js"></script>
     <script type="text/javascript" src="./css/functions.js" charset="utf-8"></script>
     <script type="text/javascript" src="./css/love.js" charset="utf-8"></script>
-      <style type="text/css">
-<!--
-.STYLE1 {color: #666666}
--->
-        </style>
 </head>
     <body>
-      <audio autoplay="autopaly">
-          <source src="music/love.mp3" type="audio/mp3" />
-      </audio>  
+
+      <div id="music163player">
+        <audio controls="controls" playsinline="" webkit-playsinline="" height="100" width="100%" autoplay="" loop="" hidden="true">  
+        <source src="https://link.hhtjim.com/163/460043703.mp3" type="audio/mpeg">  
+        </audio>
+      </div>
         <div id="main">
              <div id="wrap">
                 <div id="text">
                     <div id="code">
-                    <font color="#a0c9f5">    
-                        <span class="say"><h3>我宣布，我的未来里必须有你</h3></span><br><br>
+                    <font color="#790D92">    
+                        <span class="say"><h3>我宣布，我的未来必须有你</h3></span><br><br>
 
                         <span class="say">我们的相遇始于一个普通的下午</span><br><br>
                         <span class="say">爱自由的你闯进了我的世界</span><br><br>
@@ -42,13 +40,11 @@
                     </font>
                 </div>
                 </div>
-                <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#a0c9f5">遇见你,喜欢你的</font>
-                    <font color="#a0c9f5"></font>
-                    <span class="STYLE1"></span>
-                    <span id="clock" color="#a0c9f5"></span> 
-              </div>
-                <canvas id="canvas" width="1100" height="680"></canvas>
+                <div id="clock-box" align="right">
+                    <span class="STYLE1">遇见你的</span><span id="clock" color="#a0c9f5"></span> 
+                </div>
+                <canvas id="canvas" width="1100" height="680" ></canvas>
+
             </div>
             
         </div>
