--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
     <script type="text/javascript" src="./css/love.js" charset="utf-8"></script>
 </head>
     <body>
-
-      <div id="music163player">
-        <audio controls="controls" playsinline="" webkit-playsinline="" height="100" width="100%" autoplay="" loop="" hidden="true">  
-        <source src="https://link.hhtjim.com/163/460043703.mp3" type="audio/mpeg">  
-        </audio>
-      </div>
+        <audio autoplay="autopaly">
+            <source src="music/love.mp3" type="audio/mp3" />
+        </audio> 
         <div id="main">
              <div id="wrap">
                 <div id="text">
@@ -29,7 +26,7 @@
                         <span class="say">我们的相遇始于一个普通的下午</span><br><br>
                         <span class="say">爱自由的你闯进了我的世界</span><br><br>
                         <span class="say">你一定没意识到那一刻有多神奇</span><br><br>
-                        <span class="say">永远都记得你当时的笑靥</span><br><br>
+                        <span class="say">永远记得你当时的笑靥和眼里的星辰</span><br><br>
                         <span class="say">不经意间，我们已从相识到相知</span><br> <br>    
                         <span class="say">停不下的时光飞逝，加班无数</span><br><br>
                         <span class="say">止不住的喜欢你......</span><br><br>
