--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script type="text/javascript" src="./css/love.js" charset="utf-8"></script>
 </head>
     <body>
-        <audio autoplay="autopaly">
-            <source src="music/love.mp3" type="audio/mp3" />
-        </audio> 
+        <div id="music163player">
+            <audio controls="controls" playsinline="" webkit-playsinline="" height="100" width="100%" autoplay="" loop="" hidden="true">  
+            <source src="https://link.hhtjim.com/163/460043703.mp3" type="audio/mpeg">  
+            </audio>
+        </div>
         <div id="main">
              <div id="wrap">
                 <div id="text">
