--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
                 <div id="text">
                     <div id="code">
                     <font color="#790D92">    
-                        <span class="say"><h3>我宣布，我的未来必须有你</h3></span><br><br>
+                        <span class="say"><h2>我宣布，我的未来必须有你</h2></span><br><br>
 
-                        <span class="say">我们的相遇始于一个普通的下午</span><br><br>
-                        <span class="say">爱自由的你闯进了我的世界</span><br><br>
-                        <span class="say">你一定没意识到那一刻有多神奇</span><br><br>
-                        <span class="say">永远记得你当时的笑靥和眼里的星辰</span><br><br>
-                        <span class="say">不经意间，我们已从相识到相知</span><br> <br>    
-                        <span class="say">停不下的时光飞逝，加班无数</span><br><br>
-                        <span class="say">止不住的喜欢你......</span><br><br>
+                        <span class="say">我们的相遇始于一个普通的下午</span><br>
+                        <span class="say">爱自由的你闯进了我的世界</span><br>
+                        <span class="say">你一定没意识到那一刻有多神奇</span><br>
+                        <span class="say">永远记得你当时的笑靥和眼里的星辰</span><br>
+                        <span class="say">不经意间，我们已从相识到相知</span><br> 
+                        <span class="say">停不下的时光飞逝，加班无数</span><br>
+                        <span class="say">止不住的喜欢你......</span><br>
                         <br><br>
-                        <span class="say">祝我家小仙女，生日快乐!  -- Mr Solomiss</span><br>
-
+                        <span class="say">祝我家小仙女，生日快乐!</span><br><br>
+                        <div align="right"><span class="say" > -- Mr Solomiss</span></div>
                         
                     </font>
                 </div>
                 </div>
                 <div id="clock-box" align="right">
-                    <span class="STYLE1">遇见你的</span><span id="clock" color="#a0c9f5"></span> 
+                    <span class="STYLE1">遇见你,喜欢你的</span><span id="clock" color="#a0c9f5"></span> 
                 </div>
                 <canvas id="canvas" width="1100" height="680" ></canvas>
 
